# nixos-config

./: .gitignore  .gitleaksignore  .ls-lint.yml  .mcp.json  .pre-commit-config.yaml  AI-WORKFLOW-ENHANCEMENT-SUMMARY.md  BASB-Daily-Routines.md  BASB-File-Processing-Workflow.md  BASB-IMPLEMENTATION-GUIDE.md  BASB-Master-Dashboard.md  BASB-Quick-Reference-Guide.md  BASB-Sunsama-Integration.md  CHANGELOG.md  CICD_DEPLOYMENT_SUMMARY.md  CLAUDE-AUTO-BACKUP.md  CLAUDE-CODE-AUTOMATION.md  CLAUDE.md  CLAUDE_ORCHESTRATION.md  CONTRIBUTING.md  DOCUMENTATION-UPDATE-SUMMARY.md  GEMINI.md  INSTALL.md  LICENSE  MIGRATION_PLAN.md  PERSONAL_USE_PRIORITIES.md  README.md  SECURITY.md  configuration.nix  devenv.nix  enhanced-tools-guide.md  fish-smart-commands.md  flake.lock.backup  flake.nix  kitty-optimization-guide.md  quality-check.sh  rebuild-nixos  secrets.nix.age  yazi-file-associations.md
.claude/: ANALYSIS_SUMMARY.txt  (+4 more)
basb-system/: BASB-Content-Migration.md  BASB-Daily-Routines.md  BASB-File-Processing-Workflow.md  BASB-IMPLEMENTATION-GUIDE.md  BASB-Master-Dashboard.md  BASB-Quick-Reference-Guide.md  BASB-Readwise-API-Integration.md  BASB-Readwise-Setup.md  BASB-Sunsama-Integration.md  CHROME-BOOKMARKS-INTEGRATION.md  CHROME-FIX-SUMMARY.md  CHROME-IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION-SUMMARY.md  README-QUICKSTART.md  README.md  devenv.nix  pyproject.toml  run-tests.sh  test-chrome-detection.py
basb-system/config/: tag-mapping.json  tag-mapping.yaml
basb-system/scripts/: readwise-basb
basb-system/scripts/readwise_basb/: __init__.py  api.py  chrome.py  config.py  ui.py
basb-system/scripts/readwise_basb/workflows/: __init__.py  chrome_review.py  daily.py  setup.py  stats.py  tagging.py
basb-system/src/readwise_basb/: api.py  chrome.py  cli.py  config.py  ui.py  ui_refactored.py
basb-system/src/readwise_basb/workflows/: chrome_review.py  daily.py  setup.py  stats.py  tagging.py
basb-system/tests/: __init__.py  conftest.py
basb-system/tests/integration/: __init__.py
basb-system/tests/unit/: __init__.py  test_chrome.py  test_chrome_review.py  test_ui.py
scripts/: .devenv.flake.nix  add-frontmatter.py  add-frontmatter.sh  bootstrap-business.sh  check-claude-config.sh  check-frontmatter.py  claude-autonomous.sh  claude-morning-review.sh  claude-night-batch.sh  devenv.nix  eod-cleanup.sh  generate-changelog-draft.sh  improved-claude-automation-proposal.md  pyproject.toml  restore-machine.sh  review-files.sh  smart-office-open.sh  sync-branches.sh  update-claude-configs-fallback.py  update-claude-configs-v2.sh  update-claude-configs.sh  update-claude-tools.py  update-npm-versions.sh  update-project-claude-v2.py  update-project-claude.py  update-system-claude-v2.py  update-system-claude.py
scripts/.devenv/: input-paths.txt  load-exports  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
scripts/.devenv/gc/: shell-1-link
scripts/claude-automation/: .DO_NOT_DELETE  README.md  __init__.py  schemas.py
scripts/claude-automation/generators/: base_generator.py
scripts/claude-automation/parsers/: nix_parser.py
scripts/claude-automation/templates/: project-claude.j2  system-claude.j2
scripts/claude-automation/templates/shared/: command_examples.j2  policies.j2
scripts/claude-automation/validators/: __init__.py
scripts/claude_automation/generators/: __init__.py  base_generator.py  project_generator.py  system_generator.py
scripts/claude_automation/parsers/: __init__.py  nix_parser.py
scripts/claude_automation/validators/: content_validator.py
(+361 files in other folders)
